[package]
name = "rusty-wager"
version = "0.1.0"
edition = "2021"
authors = ["Jason Rodriguez <jasonrodriguez1474@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/JasonRodriguez1474/rusty-wager"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
